--- a/packages/typespec-go/package.json
+++ b/packages/typespec-go/package.json
@@ -45,36 +45,37 @@
   "homepage": "https://github.com/Azure/autorest.go#readme",
   "readme": "https://github.com/Azure/autorest.go/blob/main/readme.md",
   "devDependencies": {
-    "@typespec/spector": "0.1.0-alpha.11-dev.0",
-    "@typespec/http-specs": "0.1.0-alpha.17-dev.1",
+    "@typespec/spector": "0.1.0-alpha.11-dev.2",
+    "@typespec/spec-api": "0.1.0-alpha.4-dev.0",
+    "@typespec/http-specs": "0.1.0-alpha.17-dev.2",
     "@azure-tools/azure-http-specs": "0.1.0-alpha.13-dev.1",
     "@azure-tools/typespec-autorest": "0.54.0-dev.5",
     "@azure-tools/typespec-azure-core": "0.54.0-dev.5",
     "@azure-tools/typespec-azure-resource-manager": "0.54.0-dev.4",
-    "@azure-tools/typespec-client-generator-core": "0.54.0-dev.19",
+    "@azure-tools/typespec-client-generator-core": "0.54.0-dev.22",
     "@types/js-yaml": "~4.0.6",
     "@types/node": "^18.16.3",
     "@typescript-eslint/eslint-plugin": "~4.1.1",
     "@typescript-eslint/parser": "~4.1.1",
-    "@typespec/compiler": "0.68.0-dev.12",
-    "@typespec/http": "0.68.0-dev.8",
+    "@typespec/compiler": "0.68.0-dev.13",
+    "@typespec/http": "0.68.0-dev.9",
     "@typespec/openapi": "0.68.0-dev.3",
-    "@typespec/rest": "0.68.0-dev.3",
-    "@typespec/versioning": "0.68.0-dev.2",
-    "@typespec/xml": "0.68.0-dev.2",
+    "@typespec/rest": "0.68.0-dev.4",
+    "@typespec/versioning": "0.68.0-dev.3",
+    "@typespec/xml": "0.68.0-dev.3",
     "@types/jest": "~26.0.24",
     "eslint": "~6.6.0",
     "jest": "~27.0.6",
     "ts-jest": "~27.0.4",
     "typescript": "~5.1.3",
-    "@typespec/streams": "0.68.0-dev.2",
-    "@typespec/events": "0.68.0-dev.2",
-    "@typespec/sse": "0.68.0-dev.2"
+    "@typespec/streams": "0.68.0-dev.3",
+    "@typespec/events": "0.68.0-dev.3",
+    "@typespec/sse": "0.68.0-dev.3"
   },
   "peerDependencies": {
-    "@azure-tools/typespec-client-generator-core": "0.54.0-dev.19",
-    "@typespec/compiler": "0.68.0-dev.12",
-    "@typespec/http": "0.68.0-dev.8"
+    "@azure-tools/typespec-client-generator-core": "0.54.0-dev.22",
+    "@typespec/compiler": "0.68.0-dev.13",
+    "@typespec/http": "0.68.0-dev.9"
   },
   "dependencies": {
     "@azure-tools/codegen": "~2.9.2",
@@ -83,16 +84,16 @@
     "source-map-support": "0.5.21"
   },
   "overrides": {
-    "@typespec/compiler": "0.68.0-dev.12",
-    "@typespec/http": "0.68.0-dev.8",
+    "@typespec/compiler": "0.68.0-dev.13",
+    "@typespec/http": "0.68.0-dev.9",
     "@typespec/openapi": "0.68.0-dev.3",
-    "@typespec/rest": "0.68.0-dev.3",
-    "@typespec/versioning": "0.68.0-dev.2",
-    "@typespec/xml": "0.68.0-dev.2",
-    "@typespec/events": "0.68.0-dev.2",
-    "@typespec/sse": "0.68.0-dev.2",
-    "@typespec/streams": "0.68.0-dev.2",
-    "@azure-tools/typespec-client-generator-core": "0.54.0-dev.19",
+    "@typespec/rest": "0.68.0-dev.4",
+    "@typespec/versioning": "0.68.0-dev.3",
+    "@typespec/xml": "0.68.0-dev.3",
+    "@typespec/events": "0.68.0-dev.3",
+    "@typespec/sse": "0.68.0-dev.3",
+    "@typespec/streams": "0.68.0-dev.3",
+    "@azure-tools/typespec-client-generator-core": "0.54.0-dev.22",
     "@azure-tools/typespec-azure-core": "0.54.0-dev.5",
     "@azure-tools/typespec-azure-resource-manager": "0.54.0-dev.4",
     "@azure-tools/typespec-azure-rulesets": "0.54.0-dev.2",
