--- a/packages/typespec-go/package.json
+++ b/packages/typespec-go/package.json
@@ -46,59 +46,40 @@
   "readme": "https://github.com/Azure/autorest.go/blob/main/readme.md",
   "devDependencies": {
     "@typespec/spector": "0.1.0-alpha.11-dev.2",
-    "@typespec/spec-api": "0.1.0-alpha.4-dev.0",
-    "@typespec/http-specs": "0.1.0-alpha.17-dev.2",
-    "@azure-tools/azure-http-specs": "0.1.0-alpha.13-dev.2",
-    "@azure-tools/typespec-autorest": "0.54.0-dev.5",
-    "@azure-tools/typespec-azure-core": "0.54.0-dev.5",
-    "@azure-tools/typespec-azure-resource-manager": "0.54.0-dev.4",
-    "@azure-tools/typespec-client-generator-core": "0.54.0-dev.22",
+    "@typespec/http-specs": "~0.1.0-alpha.17",
+    "@azure-tools/azure-http-specs": "~0.1.0-alpha.13",
+    "@azure-tools/typespec-autorest": ">=0.54.0 <1.0.0",
+    "@azure-tools/typespec-azure-core": ">=0.54.0 <1.0.0",
+    "@azure-tools/typespec-azure-resource-manager": ">=0.54.0 <1.0.0",
+    "@azure-tools/typespec-client-generator-core": ">=0.54.0 <1.0.0",
     "@types/js-yaml": "~4.0.6",
     "@types/node": "^18.16.3",
     "@typescript-eslint/eslint-plugin": "~4.1.1",
     "@typescript-eslint/parser": "~4.1.1",
-    "@typespec/compiler": "0.68.0-dev.13",
-    "@typespec/http": "0.68.0-dev.9",
-    "@typespec/openapi": "0.68.0-dev.3",
-    "@typespec/rest": "0.68.0-dev.4",
-    "@typespec/versioning": "0.68.0-dev.3",
-    "@typespec/xml": "0.68.0-dev.3",
+    "@typespec/compiler": "^1.0.0-0",
+    "@typespec/http": "^1.0.0-0",
+    "@typespec/openapi": "^1.0.0-0",
+    "@typespec/rest": ">=0.68.0 <1.0.0",
+    "@typespec/versioning": ">=0.68.0 <1.0.0",
+    "@typespec/xml": ">=0.68.0 <1.0.0",
     "@types/jest": "~26.0.24",
     "eslint": "~6.6.0",
     "jest": "~27.0.6",
     "ts-jest": "~27.0.4",
     "typescript": "~5.1.3",
-    "@typespec/streams": "0.68.0-dev.3",
-    "@typespec/events": "0.68.0-dev.3",
-    "@typespec/sse": "0.68.0-dev.3"
+    "@typespec/streams": ">=0.68.0 <1.0.0",
+    "@typespec/events": ">=0.68.0 <1.0.0",
+    "@typespec/sse": ">=0.68.0 <1.0.0"
   },
   "peerDependencies": {
-    "@azure-tools/typespec-client-generator-core": "0.54.0-dev.22",
-    "@typespec/compiler": "0.68.0-dev.13",
-    "@typespec/http": "0.68.0-dev.9"
+    "@azure-tools/typespec-client-generator-core": ">=0.54.0 <1.0.0",
+    "@typespec/compiler": "^1.0.0-0",
+    "@typespec/http": "^1.0.0-0"
   },
   "dependencies": {
     "@azure-tools/codegen": "~2.9.2",
     "@azure-tools/linq": "~3.1.0",
     "js-yaml": "~4.1.0",
     "source-map-support": "0.5.21"
-  },
-  "overrides": {
-    "@typespec/compiler": "0.68.0-dev.13",
-    "@typespec/http": "0.68.0-dev.9",
-    "@typespec/openapi": "0.68.0-dev.3",
-    "@typespec/rest": "0.68.0-dev.4",
-    "@typespec/versioning": "0.68.0-dev.3",
-    "@typespec/xml": "0.68.0-dev.3",
-    "@typespec/events": "0.68.0-dev.3",
-    "@typespec/sse": "0.68.0-dev.3",
-    "@typespec/streams": "0.68.0-dev.3",
-    "@azure-tools/typespec-client-generator-core": "0.54.0-dev.22",
-    "@azure-tools/typespec-azure-core": "0.54.0-dev.5",
-    "@azure-tools/typespec-azure-resource-manager": "0.54.0-dev.4",
-    "@azure-tools/typespec-azure-rulesets": "0.54.0-dev.2",
-    "@azure-tools/typespec-autorest": "0.54.0-dev.5",
-    "@typespec/eslint-config-typespec": "0.56.0-dev.1",
-    "@typespec/library-linter": "0.68.0-dev.2"
   }
 }
