--- a/packages/typespec-go/package.json
+++ b/packages/typespec-go/package.json
@@ -45,7 +45,7 @@
   "homepage": "https://github.com/Azure/autorest.go#readme",
   "readme": "https://github.com/Azure/autorest.go/blob/main/readme.md",
   "devDependencies": {
-    "@typespec/spector": "0.1.0-alpha.11-dev.2",
+    "@typespec/spector": "~0.1.0-alpha.11",
     "@typespec/http-specs": "~0.1.0-alpha.17",
     "@azure-tools/azure-http-specs": "~0.1.0-alpha.13",
     "@azure-tools/typespec-autorest": ">=0.54.0 <1.0.0",
