--- a/packages/typespec-go/package.json
+++ b/packages/typespec-go/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@azure-tools/typespec-go",
-  "version": "0.4.1",
+  "version": "0.4.2",
   "description": "TypeSpec emitter for Go SDKs",
   "type": "module",
   "main": "dist/typespec-go/src/index.js",
@@ -45,36 +45,36 @@
   "homepage": "https://github.com/Azure/autorest.go#readme",
   "readme": "https://github.com/Azure/autorest.go/blob/main/readme.md",
   "devDependencies": {
-    "@typespec/spector": "~0.1.0-alpha.9",
-    "@typespec/http-specs": "~0.1.0-alpha.15",
-    "@azure-tools/azure-http-specs": "~0.1.0-alpha.10",
-    "@azure-tools/typespec-autorest": ">=0.53.0 <1.0.0",
-    "@azure-tools/typespec-azure-core": ">=0.53.0 <1.0.0",
-    "@azure-tools/typespec-azure-resource-manager": ">=0.53.0 <1.0.0",
-    "@azure-tools/typespec-client-generator-core": ">=0.53.1 <1.0.0",
+    "@typespec/spector": "~0.1.0-alpha.11",
+    "@typespec/http-specs": "~0.1.0-alpha.17",
+    "@azure-tools/azure-http-specs": "~0.1.0-alpha.13",
+    "@azure-tools/typespec-autorest": ">=0.54.0 <1.0.0",
+    "@azure-tools/typespec-azure-core": ">=0.54.0 <1.0.0",
+    "@azure-tools/typespec-azure-resource-manager": ">=0.54.0 <1.0.0",
+    "@azure-tools/typespec-client-generator-core": ">=0.54.0 <1.0.0",
     "@types/js-yaml": "~4.0.6",
     "@types/node": "^18.16.3",
     "@typescript-eslint/eslint-plugin": "~4.1.1",
     "@typescript-eslint/parser": "~4.1.1",
-    "@typespec/compiler": ">=0.67.1 <1.0.0",
-    "@typespec/http": ">=0.67.1 <1.0.0",
-    "@typespec/openapi": ">=0.67.1 <1.0.0",
-    "@typespec/rest": ">=0.67.1 <1.0.0",
-    "@typespec/versioning": ">=0.67.1 <1.0.0",
-    "@typespec/xml": ">=0.67.1 <1.0.0",
+    "@typespec/compiler": "^1.0.0-0",
+    "@typespec/http": "^1.0.0-0",
+    "@typespec/openapi": "^1.0.0-0",
+    "@typespec/rest": ">=0.68.0 <1.0.0",
+    "@typespec/versioning": ">=0.68.0 <1.0.0",
+    "@typespec/xml": ">=0.68.0 <1.0.0",
     "@types/jest": "~26.0.24",
     "eslint": "~6.6.0",
     "jest": "~27.0.6",
     "ts-jest": "~27.0.4",
     "typescript": "~5.1.3",
-    "@typespec/streams": ">=0.67.1 <1.0.0",
-    "@typespec/events": ">=0.67.1 <1.0.0",
-    "@typespec/sse": ">=0.67.1 <1.0.0"
+    "@typespec/streams": ">=0.68.0 <1.0.0",
+    "@typespec/events": ">=0.68.0 <1.0.0",
+    "@typespec/sse": ">=0.68.0 <1.0.0"
   },
   "peerDependencies": {
-    "@azure-tools/typespec-client-generator-core": ">=0.53.1 <1.0.0",
-    "@typespec/compiler": ">=0.67.1 <1.0.0",
-    "@typespec/http": ">=0.67.1 <1.0.0"
+    "@azure-tools/typespec-client-generator-core": ">=0.54.0 <1.0.0",
+    "@typespec/compiler": "^1.0.0-0",
+    "@typespec/http": "^1.0.0-0"
   },
   "dependencies": {
     "@azure-tools/codegen": "~2.9.2",
