--- a/eng/pipelines/publish-release.yml
+++ b/eng/pipelines/publish-release.yml
@@ -27,6 +27,7 @@ extends:
 
       variables: 
         - template: /eng/pipelines/templates/variables/image.yml
+        - template: /eng/pipelines/templates/variables/globals.yml
 
       jobs:
         - job: Release 
@@ -37,6 +38,8 @@ extends:
 
           steps:
             - template: /eng/pipelines/templates/steps/set-env.yaml
+              parameters:
+                GoVersion: $(GoVersionLatest)
 
             - ${{ if eq(parameters.release_autorestgo, true) }}:
               - template: /eng/pipelines/templates/steps/build-test-go.yaml
