add globals.yaml for cadl-ranch-typespec and release pipeline (#1531)

--- a/eng/pipelines/cadl-ranch-typespec.yml
+++ b/eng/pipelines/cadl-ranch-typespec.yml
@@ -11,9 +11,12 @@ pr: none
 variables:
   - name: spector
     value: $(System.DefaultWorkingDirectory)/packages/typespec-go/node_modules/@typespec/spector/node_modules/.bin/tsp-spector
+  - template: /eng/pipelines/templates/variables/globals.yml
 
 steps:
   - template: /eng/pipelines/templates/steps/set-env.yaml
+    parameters:
+      GoVersion: $(GoVersionLatest)
 
   - template: /eng/pipelines/templates/steps/build-test-typespec.yaml
 
