--- a/packages/typespec-go/package.json
+++ b/packages/typespec-go/package.json
@@ -48,10 +48,10 @@
     "@typespec/spector": "~0.1.0-alpha.11",
     "@typespec/http-specs": "~0.1.0-alpha.17",
     "@azure-tools/azure-http-specs": "~0.1.0-alpha.13",
-    "@azure-tools/typespec-autorest": ">=0.54.0 <1.0.0",
-    "@azure-tools/typespec-azure-core": ">=0.54.0 <1.0.0",
-    "@azure-tools/typespec-azure-resource-manager": ">=0.54.0 <1.0.0",
-    "@azure-tools/typespec-client-generator-core": ">=0.54.0 <1.0.0",
+    "@azure-tools/typespec-autorest": "0.54.0",
+    "@azure-tools/typespec-azure-core": "0.54.0",
+    "@azure-tools/typespec-azure-resource-manager": "0.54.0",
+    "@azure-tools/typespec-client-generator-core": "0.54.2",
     "@types/js-yaml": "~4.0.6",
     "@types/node": "^18.16.3",
     "@typescript-eslint/eslint-plugin": "~4.1.1",
@@ -59,20 +59,20 @@
     "@typespec/compiler": "^1.0.0-0",
     "@typespec/http": "^1.0.0-0",
     "@typespec/openapi": "^1.0.0-0",
-    "@typespec/rest": ">=0.68.0 <1.0.0",
-    "@typespec/versioning": ">=0.68.0 <1.0.0",
-    "@typespec/xml": ">=0.68.0 <1.0.0",
+    "@typespec/rest": "0.68.0",
+    "@typespec/versioning": "0.68.0",
+    "@typespec/xml": "0.68.0",
     "@types/jest": "~26.0.24",
     "eslint": "~6.6.0",
     "jest": "~27.0.6",
     "ts-jest": "~27.0.4",
     "typescript": "~5.1.3",
-    "@typespec/streams": ">=0.68.0 <1.0.0",
-    "@typespec/events": ">=0.68.0 <1.0.0",
-    "@typespec/sse": ">=0.68.0 <1.0.0"
+    "@typespec/streams": "0.68.0",
+    "@typespec/events": "0.68.0",
+    "@typespec/sse": "0.68.0"
   },
   "peerDependencies": {
-    "@azure-tools/typespec-client-generator-core": ">=0.54.0 <1.0.0",
+    "@azure-tools/typespec-client-generator-core": "0.54.2",
     "@typespec/compiler": "^1.0.0-0",
     "@typespec/http": "^1.0.0-0"
   },
