--- a/packages/typespec-go/package.json
+++ b/packages/typespec-go/package.json
@@ -58,8 +58,8 @@
     "@typespec/events": "0.69.0",
     "@typespec/http": "1.0.0-rc.1",
     "@typespec/http-specs": "0.1.0-alpha.20",
-    "@typespec/openapi": "1.0.0-rc.1",
-    "@typespec/rest": "0.69.0",
+    "@typespec/openapi": "1.0.0-rc.2-dev.0",
+    "@typespec/rest": "0.70.0-dev.0",
     "@typespec/spector": "0.1.0-alpha.12",
     "@typespec/sse": "0.69.0",
     "@typespec/streams": "0.69.0",
@@ -73,9 +73,9 @@
     "vitest": "catalog:"
   },
   "peerDependencies": {
-    "@azure-tools/typespec-client-generator-core": "0.55.0",
-    "@typespec/compiler": "^1.0.0-rc.1",
-    "@typespec/http": "^1.0.0-rc.1"
+    "@azure-tools/typespec-client-generator-core": "0.56.0-dev.4",
+    "@typespec/compiler": "1.0.0-rc.2-dev.8",
+    "@typespec/http": "1.0.0-rc.2-dev.1"
   },
   "dependencies": {
     "@azure-tools/codegen": "catalog:",
