group all test modules into one PR

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -6,3 +6,7 @@ updates:
       - /packages/typespec-go/test
     schedule:
       interval: daily
+    gropus:
+      all-tests:
+        patterns:
+          - "*"
