Use pnpm instead of rushjs
Deleted various files used by rushjs and added pnpm workspace.
Consolidated tsconfig.json settings.
The utility scripts like gogetu.js etc now require an explicit argument
for the cwd else they run against the entire repo (pnpm has no
equivalent to RUSH_INVOKED_FOLDER at this time). In addition, the
utility scripts have been converted to common module format.
autorest.go and typespec-go switched to vitest although it isn't used
right now. autorest.gotest remains on jest.
Updates eslint config files to flat format. autorest.gotest will
maintain its own config file due to lots of lint.
Fixed up some test issues in autorest.gotest.
CI has been updated to install pnpm.
The CI for typespec-go will now build and install the tarball to be
consumed by tspcompile.js (tests the real-world scenario; we already do
this for autorest.go).

--- a/eng/pipelines/templates/steps/build-test-go.yaml
+++ b/eng/pipelines/templates/steps/build-test-go.yaml
@@ -3,24 +3,28 @@ parameters:
 
 steps:
   - script: |
-      rush install
-      rush rebuild -v
+      pnpm install
+      pnpm build
     displayName: "Build Generator Sources"
-
-  - script: |
-      npm run eslint
-    displayName: "Run Lint"
     workingDirectory: $(System.DefaultWorkingDirectory)/packages/autorest.go
 
-  - script: npm pack
-    displayName: "Create npm tarball"
+  - script: |
+      pnpm eslint
+    displayName: "Run Lint"
     workingDirectory: $(System.DefaultWorkingDirectory)/packages/autorest.go
 
   - script: |
       export currentVersion=$(node -p -e "require('./package.json').version")
-      rush regenerate --use-package=$(System.DefaultWorkingDirectory)/packages/autorest.go/autorest-go-$currentVersion.tgz
+      pnpm pack
+      npm install -g autorest-go-$currentVersion.tgz
+    displayName: "Create and install npm tarball"
+    workingDirectory: $(System.DefaultWorkingDirectory)/packages/autorest.go
+
+  - script: |
+      export currentVersion=$(node -p -e "require('./package.json').version")
+      pnpm regenerate --use-package=$(System.DefaultWorkingDirectory)/packages/autorest.go/autorest-go-$currentVersion.tgz
       cd test
-      rush modtidy 2>&1
+      pnpm -w modtidy $pwd 2>&1
       git add -A .
       git diff --staged -w 1>&2
     displayName: "Regenerate Autorest Tests"
@@ -119,7 +123,7 @@ steps:
     displayName: "Run Acceptance Tests - go$(GoVersion)"
     timeoutInMinutes: 10
 
-  - pwsh: npm test
+  - pwsh: pnpm test
     displayName: "Run Unit Tests - go$(GoVersion)"
     workingDirectory: $(System.DefaultWorkingDirectory)/packages/autorest.go
 
