--- a/eng/pipelines/cadl-ranch-typespec.yml
+++ b/eng/pipelines/cadl-ranch-typespec.yml
@@ -9,8 +9,6 @@ trigger:
 pr: none
 
 variables:
-  - name: spector
-    value: $(System.DefaultWorkingDirectory)/packages/typespec-go/node_modules/@typespec/spector/node_modules/.bin/tsp-spector
   - template: /eng/pipelines/templates/variables/globals.yml
 
 steps:
@@ -26,4 +24,4 @@ steps:
       azureSubscription: "TypeSpec Storage"
       scriptType: "bash"
       scriptLocation: "inlineScript"
-      inlineScript: $(spector) upload-coverage --containerName=coverages --generatorName @azure-tools/typespec-go --storageAccountName typespec --generatorVersion $(node -p -e "require('$(System.DefaultWorkingDirectory)/packages/typespec-go/package.json').version") --generatorMode azure
+      inlineScript: npx tsp-spector upload-coverage --containerName=coverages --generatorName @azure-tools/typespec-go --storageAccountName typespec --generatorVersion $(node -p -e "require('$(System.DefaultWorkingDirectory)/packages/typespec-go/package.json').version") --generatorMode azure
