--- a/packages/autorest.go/package.json
+++ b/packages/autorest.go/package.json
@@ -9,7 +9,7 @@
     "doc": "docs"
   },
   "engines": {
-    "node": ">=12.0.0"
+    "node": ">=20.0.0"
   },
   "files": [
     "dist/**",
@@ -25,10 +25,11 @@
     "stop-testserver": "./node_modules/.bin/autorest-testserver stop",
     "watch": "tsc -p . --watch",
     "prepare": "npm run build",
-    "test": "jest --ci --passWithNoTests",
+    "test": "vitest run --pass-with-no-tests",
     "clean": "ver > nul 2>&1 nul && npm run --silent clean-cmd || npm run --silent clean-bash",
     "clean-cmd": "if exist dist rmdir /s /q dist && exit 0 || exit 0 ",
-    "clean-bash": "rm nul && rm -rf dist && exit 0 || exit 0"
+    "clean-bash": "rm nul && rm -rf dist && exit 0 || exit 0",
+    "regenerate": "node .scripts/regeneration.js"
   },
   "repository": {
     "type": "git",
@@ -48,31 +49,29 @@
   "homepage": "https://github.com/Azure/autorest.go#readme",
   "readme": "https://github.com/Azure/autorest.go/blob/main/readme.md",
   "devDependencies": {
-    "@types/js-yaml": "~4.0.6",
-    "@types/node": "^18.16.3",
-    "typescript": "~5.1.3",
-    "@typescript-eslint/eslint-plugin": "~4.1.1",
-    "@typescript-eslint/parser": "~4.1.1",
-    "@microsoft.azure/autorest.testserver": "3.3.49",
-    "eslint": "~6.6.0",
+    "@autorest/codemodel": "catalog:",
     "@autorest/extension-base": "~3.5.2",
-    "@azure-tools/codegen": "~2.9.2",
-    "@autorest/codemodel": "~4.19.3",
-    "jest": "~27.0.6",
-    "ts-jest": "~27.0.4",
-    "@types/jest": "~26.0.24"
+    "@azure-tools/codegen": "catalog:",
+    "@eslint/js": "catalog:",
+    "@microsoft.azure/autorest.testserver": "3.3.49",
+    "@types/node": "catalog:",
+    "@vitest/coverage-v8": "catalog:",
+    "@vitest/ui": "catalog:",
+    "eslint": "catalog:",
+    "typescript": "catalog:",
+    "typescript-eslint": "catalog:",
+    "vitest": "catalog:"
   },
   "dependencies": {
-    "@azure-tools/async-io": "~3.0.0",
+    "@autorest/codemodel": "catalog:",
     "@autorest/extension-base": "~3.5.2",
-    "@azure-tools/codegen": "~2.9.2",
-    "@autorest/codemodel": "~4.19.3",
-    "@azure-tools/linq": "~3.1.0",
+    "@azure-tools/async-io": "~3.0.0",
+    "@azure-tools/codegen": "catalog:",
+    "@azure-tools/linq": "catalog:",
     "@azure-tools/tasks": "~3.0.0",
     "@types/html-to-text": "^5.1.2",
     "@types/showdown": "^1.9.3",
     "html-to-text": "^5.1.1",
-    "js-yaml": "~4.1.0",
     "showdown": "^1.9.1",
     "source-map-support": "0.5.21"
   }
