--- a/packages/autorest.gotest/package.json
+++ b/packages/autorest.gotest/package.json
@@ -1,70 +1,71 @@
 {
-    "name": "@autorest/gotest",
-    "version": "4.7.4",
-    "description": "Autorest extension for go test generation",
-    "main": "dist/index.js",
-    "scripts": {
-        "start": "node --max_old_space_size=4096 dist/src/index.js",
-        "debug": "node --max_old_space_size=4096 --inspect-brk ./dist/src/index.js",
-        "eslint-fix": "eslint  . --fix --ext .ts",
-        "eslint": "eslint  . --ext .ts",
-        "build": "tsc -p . && cpy template ../dist/src --cwd=src/ --parents",
-        "watch": "tsc -p . --watch",
-        "prepare": "npm run build",
-        "test": "npm run build && cross-env NODE_ENV=test jest --ci --reporters=default --reporters=jest-junit",
-        "unittest": "npm run build && cross-env NODE_ENV=test jest --ci --reporters=default --reporters=jest-junit --config ./jest.unittest.config.js",
-        "unittest-update": "npm run build && cross-env NODE_ENV=test jest --ci --reporters=default --reporters=jest-junit --updateSnapshot --config ./jest.unittest.config.js",
-        "clean": "ver > nul 2>&1 nul && npm run --silent clean-cmd || npm run --silent clean-bash",
-        "clean-cmd": "if exist dist rmdir /s /q dist && exit 0 || exit 0 ",
-        "clean-bash": "rm nul && rm -rf dist && exit 0 || exit 0"
-    },
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/Azure/azure-sdk-tools.git"
-    },
-    "keywords": [
-        "autorest",
-        "extension"
-    ],
-    "author": "Microsoft Corporation",
-    "license": "MIT",
-    "devDependencies": {
-        "@autorest/codemodel": "~4.19.3",
-        "@azure-tools/codegen": "~2.9.2",
-        "@types/jest": "~26.0.24",
-        "@types/lodash": "^4.14.183",
-        "@types/node": "^18.16.3",
-        "@typescript-eslint/eslint-plugin": "~4.1.1",
-        "@typescript-eslint/parser": "~4.1.1",
-        "cpy-cli": "~4.1.0",
-        "eslint": "~6.6.0",
-        "eslint-config-prettier": "^8.3.0",
-        "eslint-plugin-prettier": "^3.4.0",
-        "eslint-plugin-sort-imports-es6-autofix": "^0.6.0",
-        "jest": "~27.0.6",
-        "prettier": "^2.2.1",
-        "ts-jest": "~27.0.4",
-        "typescript": "~5.1.3"
-    },
-    "dependencies": {
-        "@autorest/codemodel": "~4.19.3",
-        "@autorest/extension-base": "~3.5.2",
-        "@autorest/testmodeler": "~2.4.0",
-        "@azure-tools/codegen": "~2.9.2",
-        "@azure-tools/linq": "~3.1.0",
-        "autorest": "^3.2.3",
-        "cross-env": "^7.0.3",
-        "jest-junit": "^12.2.0",
-        "js-yaml": "~4.1.0",
-        "jsonpath": "^1.1.1",
-        "lodash": "^4.17.21",
-        "node-yaml": "^3.2.0",
-        "nunjucks": "^3.2.3",
-        "oav": "3.0.3",
-        "reflect-metadata": "~0.1.13"
-    },
-    "files": [
-        "dist",
-        "README.md"
-    ]
+  "name": "@autorest/gotest",
+  "version": "4.7.4",
+  "description": "Autorest extension for go test generation",
+  "main": "dist/src/index.js",
+  "scripts": {
+    "start": "node --max_old_space_size=4096 dist/src/index.js",
+    "debug": "node --max_old_space_size=4096 --inspect-brk ./dist/src/index.js",
+    "eslint-fix": "eslint  . --fix --ext .ts",
+    "eslint": "eslint  . --ext .ts",
+    "build": "tsc -p . && cpy template ../../dist/src --cwd=src/ --parents",
+    "watch": "tsc -p . --watch",
+    "prepare": "npm run build",
+    "test": "npm run build && cross-env NODE_ENV=test jest --ci --reporters=default --reporters=jest-junit",
+    "unittest": "npm run build && cross-env NODE_ENV=test jest --ci --reporters=default --reporters=jest-junit --config ./jest.unittest.config.js",
+    "unittest-update": "npm run build && cross-env NODE_ENV=test jest --ci --reporters=default --reporters=jest-junit --updateSnapshot --config ./jest.unittest.config.js",
+    "clean": "ver > nul 2>&1 nul && npm run --silent clean-cmd || npm run --silent clean-bash",
+    "clean-cmd": "if exist dist rmdir /s /q dist && exit 0 || exit 0 ",
+    "clean-bash": "rm nul && rm -rf dist && exit 0 || exit 0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Azure/azure-sdk-tools.git"
+  },
+  "keywords": [
+    "autorest",
+    "extension"
+  ],
+  "author": "Microsoft Corporation",
+  "license": "MIT",
+  "devDependencies": {
+    "@autorest/codemodel": "catalog:",
+    "@azure-tools/codegen": "catalog:",
+    "@types/jest": "~29.5.14",
+    "@types/lodash": "^4.17.16",
+    "@types/node": "catalog:",
+    "@typescript-eslint/eslint-plugin": "~8.31.1",
+    "@typescript-eslint/parser": "~8.31.1",
+    "cpy-cli": "~5.0.0",
+    "eslint": "catalog:",
+    "eslint-config-prettier": "^10.1.2",
+    "eslint-plugin-prettier": "^5.2.6",
+    "eslint-plugin-sort-imports-es6-autofix": "^0.6.0",
+    "jest": "~29.7.0",
+    "prettier": "^3.5.3",
+    "ts-jest": "~29.3.2",
+    "typescript": "catalog:"
+  },
+  "dependencies": {
+    "@autorest/codemodel": "catalog:",
+    "@autorest/extension-base": "~3.6.0",
+    "@autorest/testmodeler": "~2.4.0",
+    "@azure-tools/codegen": "catalog:",
+    "@azure-tools/linq": "catalog:",
+    "@types/nunjucks": "^3.2.6",
+    "autorest": "^3.7.1",
+    "cross-env": "^7.0.3",
+    "jest-junit": "^16.0.0",
+    "js-yaml": "~4.1.0",
+    "jsonpath": "^1.1.1",
+    "lodash": "^4.17.21",
+    "node-yaml": "^4.0.1",
+    "nunjucks": "^3.2.3",
+    "oav": "3.0.3",
+    "reflect-metadata": "~0.2.2"
+  },
+  "files": [
+    "dist",
+    "README.md"
+  ]
 }
