--- a/packages/autorest.gotest/tsconfig.json
+++ b/packages/autorest.gotest/tsconfig.json
@@ -1,11 +1,12 @@
 {
-    "compilerOptions": {
-        "lib": ["es2016", "dom"],
-        "outDir": "dist",
-        "module": "commonjs",
-        "sourceMap": true,
-        "target": "es2016",
-        "declaration": true
-    },
-    "include": ["src", "test"]
+  "extends": "../../tsconfig.json",
+  "compilerOptions": {
+    "noImplicitAny": false,
+    "noImplicitReturns": false,
+    "outDir": "dist",
+    "strict": false,
+    "strictNullChecks": false,
+    "types": ["node", "jest"],
+  },
+  "include": ["src", "test"]
 }
