--- a/packages/codegen.go/package.json
+++ b/packages/codegen.go/package.json
@@ -2,14 +2,15 @@
   "name": "@azure-tools/codegen.go",
   "version": "0.1.0",
   "type": "module",
+  "private": true,
   "scripts": {
     "build": "tsc -p ."
   },
   "dependencies": {
-    "@azure-tools/codegen": "~2.9.2",
-    "@azure-tools/linq": "~3.1.0"
+    "@azure-tools/codegen": "catalog:",
+    "@azure-tools/linq": "catalog:"
   },
   "devDependencies": {
-    "typescript": "~5.1.3"
+    "typescript": "catalog:"
   }
 }
