--- a/packages/codemodel.go/package.json
+++ b/packages/codemodel.go/package.json
@@ -1,11 +1,12 @@
 {
-    "name": "@azure-tools/codemodel.go",
-    "version": "0.1.0",
-    "type": "module",
-    "scripts": {
-      "build": "tsc -p ."
-    },
-    "devDependencies": {
-      "typescript": "~5.1.3"
-    }
+  "name": "@azure-tools/codemodel.go",
+  "version": "0.1.0",
+  "type": "module",
+  "private": true,
+  "scripts": {
+    "build": "tsc -p ."
+  },
+  "devDependencies": {
+    "typescript": "catalog:"
   }
+}
