--- a/packages/naming.go/package.json
+++ b/packages/naming.go/package.json
@@ -2,10 +2,11 @@
   "name": "@azure-tools/naming.go",
   "version": "0.1.0",
   "type": "module",
+  "private": true,
   "scripts": {
     "build": "tsc -p ."
   },
   "devDependencies": {
-    "typescript": "~5.1.3"
+    "typescript": "catalog:"
   }
 }
