--- a/packages/typespec-go/package.json
+++ b/packages/typespec-go/package.json
@@ -12,17 +12,20 @@
     "doc": "docs"
   },
   "engines": {
-    "node": ">=12.0.0"
+    "node": ">=20.0.0"
   },
   "scripts": {
     "eslint-fix": "eslint  . --fix --ext .ts",
     "eslint": "eslint  . --ext .ts",
     "build": "tsc -p .",
     "watch": "tsc -p . --watch",
-    "test": "jest --ci --passWithNoTests",
+    "prepare": "npm run build",
+    "test": "vitest run --pass-with-no-tests",
     "clean": "ver > nul 2>&1 nul && npm run --silent clean-cmd || npm run --silent clean-bash",
     "clean-cmd": "if exist dist rmdir /s /q dist && exit 0 || exit 0 ",
-    "clean-bash": "rm nul && rm -rf dist && exit 0 || exit 0"
+    "clean-bash": "rm nul && rm -rf dist && exit 0 || exit 0",
+    "tspcompile": "node .scripts/tspcompile.js",
+    "spector": "node .scripts/spector.js"
   },
   "files": [
     "dist/**",
@@ -50,11 +53,7 @@
     "@azure-tools/typespec-azure-core": "0.55.0",
     "@azure-tools/typespec-azure-resource-manager": "0.55.0",
     "@azure-tools/typespec-client-generator-core": "0.55.0",
-    "@types/jest": "~26.0.24",
-    "@types/js-yaml": "~4.0.6",
-    "@types/node": "^18.16.3",
-    "@typescript-eslint/eslint-plugin": "~4.1.1",
-    "@typescript-eslint/parser": "~4.1.1",
+    "@types/node": "catalog:",
     "@typespec/compiler": "1.0.0-rc.1",
     "@typespec/events": "0.69.0",
     "@typespec/http": "1.0.0-rc.1",
@@ -66,10 +65,12 @@
     "@typespec/streams": "0.69.0",
     "@typespec/versioning": "0.69.0",
     "@typespec/xml": "0.69.0",
-    "eslint": "~6.6.0",
-    "jest": "~27.0.6",
-    "ts-jest": "~27.0.4",
-    "typescript": "~5.1.3"
+    "@vitest/coverage-v8": "catalog:",
+    "@vitest/ui": "catalog:",
+    "eslint": "catalog:",
+    "typescript": "catalog:",
+    "typescript-eslint": "catalog:",
+    "vitest": "catalog:"
   },
   "peerDependencies": {
     "@azure-tools/typespec-client-generator-core": "0.55.0",
@@ -77,9 +78,8 @@
     "@typespec/http": "^1.0.0-rc.1"
   },
   "dependencies": {
-    "@azure-tools/codegen": "~2.9.2",
-    "@azure-tools/linq": "~3.1.0",
-    "js-yaml": "~4.1.0",
+    "@azure-tools/codegen": "catalog:",
+    "@azure-tools/linq": "catalog:",
     "source-map-support": "0.5.21"
   }
 }
