--- a/packages/typespec-go/package.json
+++ b/packages/typespec-go/package.json
@@ -48,40 +48,23 @@
   "homepage": "https://github.com/Azure/autorest.go#readme",
   "readme": "https://github.com/Azure/autorest.go/blob/main/readme.md",
   "devDependencies": {
-<<<<<<< HEAD
-    "@azure-tools/azure-http-specs": "0.1.0-alpha.15",
-    "@azure-tools/typespec-autorest": "0.55.0",
-    "@azure-tools/typespec-azure-core": "0.55.0",
-    "@azure-tools/typespec-azure-resource-manager": "0.55.0",
-    "@azure-tools/typespec-client-generator-core": "0.55.0",
+    "@azure-tools/azure-http-specs": "0.1.0-alpha.17-dev.0",
+    "@azure-tools/typespec-autorest": "0.56.0-dev.7",
+    "@azure-tools/typespec-azure-core": "0.56.0-dev.4",
+    "@azure-tools/typespec-azure-resource-manager": "0.56.0-dev.5",
+    "@azure-tools/typespec-client-generator-core": "0.56.0-dev.7",
     "@types/node": "catalog:",
-    "@typespec/compiler": "1.0.0-rc.1",
-    "@typespec/events": "0.69.0",
-    "@typespec/http": "1.0.0-rc.1",
-    "@typespec/http-specs": "0.1.0-alpha.20",
-=======
-    "@azure-tools/azure-http-specs": "0.1.0-alpha.16-dev.3",
-    "@azure-tools/typespec-autorest": "0.56.0-dev.2",
-    "@azure-tools/typespec-azure-core": "0.56.0-dev.1",
-    "@azure-tools/typespec-azure-resource-manager": "0.56.0-dev.1",
-    "@azure-tools/typespec-client-generator-core": "0.56.0-dev.4",
-    "@types/jest": "~26.0.24",
-    "@types/js-yaml": "~4.0.6",
-    "@types/node": "^18.16.3",
-    "@typescript-eslint/eslint-plugin": "~4.1.1",
-    "@typescript-eslint/parser": "~4.1.1",
-    "@typespec/compiler": "1.0.0-rc.2-dev.9",
-    "@typespec/events": "0.70.0-dev.0",
-    "@typespec/http": "1.0.0-rc.2-dev.1",
-    "@typespec/http-specs": "0.1.0-alpha.21-dev.2",
->>>>>>> a44b5647 (upgrade tsp toolset)
-    "@typespec/openapi": "1.0.0-rc.2-dev.0",
-    "@typespec/rest": "0.70.0-dev.0",
-    "@typespec/spector": "0.1.0-alpha.12",
-    "@typespec/sse": "0.69.0",
-    "@typespec/streams": "0.69.0",
-    "@typespec/versioning": "0.69.0",
-    "@typespec/xml": "0.69.0",
+    "@typespec/compiler": "1.0.0-rc.2-dev.26",
+    "@typespec/events": "0.70.0-dev.2",
+    "@typespec/http": "1.0.0-rc.2-dev.6",
+    "@typespec/http-specs": "0.1.0-alpha.22-dev.0",
+    "@typespec/openapi": "1.0.0-rc.2-dev.2",
+    "@typespec/rest": "0.70.0-dev.3",
+    "@typespec/spector": "0.1.0-alpha.14-dev.1",
+    "@typespec/sse": "0.70.0-dev.2",
+    "@typespec/streams": "0.70.0-dev.2",
+    "@typespec/versioning": "0.70.0-dev.2",
+    "@typespec/xml": "0.70.0-dev.2",
     "@vitest/coverage-v8": "catalog:",
     "@vitest/ui": "catalog:",
     "eslint": "catalog:",
@@ -90,36 +73,35 @@
     "vitest": "catalog:"
   },
   "peerDependencies": {
-    "@azure-tools/typespec-client-generator-core": "0.56.0-dev.4",
-    "@typespec/compiler": "1.0.0-rc.2-dev.9",
-    "@typespec/http": "1.0.0-rc.2-dev.1"
+    "@azure-tools/typespec-client-generator-core": "0.56.0-dev.7",
+    "@typespec/compiler": "1.0.0-rc.2-dev.26",
+    "@typespec/http": "1.0.0-rc.2-dev.6"
   },
   "dependencies": {
     "@azure-tools/codegen": "catalog:",
     "@azure-tools/linq": "catalog:",
     "source-map-support": "0.5.21"
-<<<<<<< HEAD
-=======
   },
   "overrides": {
-    "@typespec/compiler": "1.0.0-rc.2-dev.9",
-    "@typespec/http": "1.0.0-rc.2-dev.1",
-    "@typespec/openapi": "1.0.0-rc.2-dev.0",
-    "@typespec/rest": "0.70.0-dev.0",
-    "@typespec/versioning": "0.70.0-dev.0",
-    "@typespec/xml": "0.70.0-dev.0",
-    "@typespec/events": "0.70.0-dev.0",
-    "@typespec/sse": "0.70.0-dev.0",
-    "@typespec/streams": "0.70.0-dev.0",
-    "@azure-tools/typespec-client-generator-core": "0.56.0-dev.4",
-    "@azure-tools/typespec-azure-core": "0.56.0-dev.1",
-    "@azure-tools/typespec-azure-resource-manager": "0.56.0-dev.1",
-    "@azure-tools/typespec-azure-rulesets": "0.56.0-dev.0",
-    "@azure-tools/typespec-autorest": "0.56.0-dev.2",
+    "@typespec/compiler": "1.0.0-rc.2-dev.26",
+    "@typespec/http": "1.0.0-rc.2-dev.6",
+    "@typespec/openapi": "1.0.0-rc.2-dev.2",
+    "@typespec/rest": "0.70.0-dev.3",
+    "@typespec/versioning": "0.70.0-dev.2",
+    "@typespec/xml": "0.70.0-dev.2",
+    "@typespec/events": "0.70.0-dev.2",
+    "@typespec/sse": "0.70.0-dev.2",
+    "@typespec/streams": "0.70.0-dev.2",
+    "@typespec/http-specs": "0.1.0-alpha.22-dev.0",
+    "@typespec/spector": "0.1.0-alpha.14-dev.1",
+    "@typespec/spec-api": "0.1.0-alpha.7-dev.0",
+    "@azure-tools/typespec-client-generator-core": "0.56.0-dev.7",
+    "@azure-tools/typespec-azure-core": "0.56.0-dev.4",
+    "@azure-tools/typespec-azure-resource-manager": "0.56.0-dev.5",
+    "@azure-tools/typespec-azure-rulesets": "0.56.0-dev.1",
+    "@azure-tools/typespec-autorest": "0.56.0-dev.7",
+    "@azure-tools/azure-http-specs": "0.1.0-alpha.17-dev.0",
     "@typespec/eslint-config-typespec": "0.56.0-dev.1",
-    "@typespec/library-linter": "0.70.0-dev.0",
-    "@typespec/http-specs": "0.1.0-alpha.21-dev.2",
-    "@azure-tools/azure-http-specs": "0.1.0-alpha.16-dev.3"
->>>>>>> a44b5647 (upgrade tsp toolset)
+    "@typespec/library-linter": "0.70.0-dev.1"
   }
 }
