--- a/packages/typespec-go/package.json
+++ b/packages/typespec-go/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@azure-tools/typespec-go",
-  "version": "0.4.4",
+  "version": "0.4.5",
   "description": "TypeSpec emitter for Go SDKs",
   "type": "module",
   "main": "dist/typespec-go/src/index.js",
@@ -48,23 +48,23 @@
   "homepage": "https://github.com/Azure/autorest.go#readme",
   "readme": "https://github.com/Azure/autorest.go/blob/main/readme.md",
   "devDependencies": {
-    "@azure-tools/azure-http-specs": "0.1.0-alpha.17-dev.0",
-    "@azure-tools/typespec-autorest": "0.56.0-dev.7",
-    "@azure-tools/typespec-azure-core": "0.56.0-dev.4",
-    "@azure-tools/typespec-azure-resource-manager": "0.56.0-dev.5",
-    "@azure-tools/typespec-client-generator-core": "0.56.0-dev.7",
+    "@azure-tools/azure-http-specs": "0.1.0-alpha.17",
+    "@azure-tools/typespec-autorest": "0.56.0",
+    "@azure-tools/typespec-azure-core": "0.56.0",
+    "@azure-tools/typespec-azure-resource-manager": "0.56.0",
+    "@azure-tools/typespec-client-generator-core": "0.56.0",
     "@types/node": "catalog:",
-    "@typespec/compiler": "1.0.0-rc.2-dev.26",
-    "@typespec/events": "0.70.0-dev.2",
-    "@typespec/http": "1.0.0-rc.2-dev.6",
-    "@typespec/http-specs": "0.1.0-alpha.22-dev.0",
-    "@typespec/openapi": "1.0.0-rc.2-dev.2",
-    "@typespec/rest": "0.70.0-dev.3",
-    "@typespec/spector": "0.1.0-alpha.14-dev.1",
-    "@typespec/sse": "0.70.0-dev.2",
-    "@typespec/streams": "0.70.0-dev.2",
-    "@typespec/versioning": "0.70.0-dev.2",
-    "@typespec/xml": "0.70.0-dev.2",
+    "@typespec/compiler": "1.0.0",
+    "@typespec/events": "0.70.0",
+    "@typespec/http": "1.0.0",
+    "@typespec/http-specs": "0.1.0-alpha.22",
+    "@typespec/openapi": "1.0.0",
+    "@typespec/rest": "0.70.0",
+    "@typespec/spector": "0.1.0-alpha.13",
+    "@typespec/sse": "0.70.0",
+    "@typespec/streams": "0.70.0",
+    "@typespec/versioning": "0.70.0",
+    "@typespec/xml": "0.70.0",
     "@vitest/coverage-v8": "catalog:",
     "@vitest/ui": "catalog:",
     "eslint": "catalog:",
@@ -73,35 +73,13 @@
     "vitest": "catalog:"
   },
   "peerDependencies": {
-    "@azure-tools/typespec-client-generator-core": "0.56.0-dev.7",
-    "@typespec/compiler": "1.0.0-rc.2-dev.26",
-    "@typespec/http": "1.0.0-rc.2-dev.6"
+    "@azure-tools/typespec-client-generator-core": "0.56.0",
+    "@typespec/compiler": "^1.0.0",
+    "@typespec/http": "^1.0.0"
   },
   "dependencies": {
     "@azure-tools/codegen": "catalog:",
     "@azure-tools/linq": "catalog:",
     "source-map-support": "0.5.21"
-  },
-  "overrides": {
-    "@typespec/compiler": "1.0.0-rc.2-dev.26",
-    "@typespec/http": "1.0.0-rc.2-dev.6",
-    "@typespec/openapi": "1.0.0-rc.2-dev.2",
-    "@typespec/rest": "0.70.0-dev.3",
-    "@typespec/versioning": "0.70.0-dev.2",
-    "@typespec/xml": "0.70.0-dev.2",
-    "@typespec/events": "0.70.0-dev.2",
-    "@typespec/sse": "0.70.0-dev.2",
-    "@typespec/streams": "0.70.0-dev.2",
-    "@typespec/http-specs": "0.1.0-alpha.22-dev.0",
-    "@typespec/spector": "0.1.0-alpha.14-dev.1",
-    "@typespec/spec-api": "0.1.0-alpha.7-dev.0",
-    "@azure-tools/typespec-client-generator-core": "0.56.0-dev.7",
-    "@azure-tools/typespec-azure-core": "0.56.0-dev.4",
-    "@azure-tools/typespec-azure-resource-manager": "0.56.0-dev.5",
-    "@azure-tools/typespec-azure-rulesets": "0.56.0-dev.1",
-    "@azure-tools/typespec-autorest": "0.56.0-dev.7",
-    "@azure-tools/azure-http-specs": "0.1.0-alpha.17-dev.0",
-    "@typespec/eslint-config-typespec": "0.56.0-dev.1",
-    "@typespec/library-linter": "0.70.0-dev.1"
   }
 }
