--- a/packages/typespec-go/package.json
+++ b/packages/typespec-go/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@azure-tools/typespec-go",
-  "version": "0.4.4",
+  "version": "0.4.5",
   "description": "TypeSpec emitter for Go SDKs",
   "type": "module",
   "main": "dist/typespec-go/src/index.js",
@@ -48,23 +48,23 @@
   "homepage": "https://github.com/Azure/autorest.go#readme",
   "readme": "https://github.com/Azure/autorest.go/blob/main/readme.md",
   "devDependencies": {
-    "@azure-tools/azure-http-specs": "0.1.0-alpha.15",
-    "@azure-tools/typespec-autorest": "0.55.0",
-    "@azure-tools/typespec-azure-core": "0.55.0",
-    "@azure-tools/typespec-azure-resource-manager": "0.55.0",
-    "@azure-tools/typespec-client-generator-core": "0.55.0",
+    "@azure-tools/azure-http-specs": "0.1.0-alpha.17",
+    "@azure-tools/typespec-autorest": "0.56.0",
+    "@azure-tools/typespec-azure-core": "0.56.0",
+    "@azure-tools/typespec-azure-resource-manager": "0.56.0",
+    "@azure-tools/typespec-client-generator-core": "0.56.0",
     "@types/node": "catalog:",
-    "@typespec/compiler": "1.0.0-rc.1",
-    "@typespec/events": "0.69.0",
-    "@typespec/http": "1.0.0-rc.1",
-    "@typespec/http-specs": "0.1.0-alpha.20",
-    "@typespec/openapi": "1.0.0-rc.1",
-    "@typespec/rest": "0.69.0",
-    "@typespec/spector": "0.1.0-alpha.12",
-    "@typespec/sse": "0.69.0",
-    "@typespec/streams": "0.69.0",
-    "@typespec/versioning": "0.69.0",
-    "@typespec/xml": "0.69.0",
+    "@typespec/compiler": "1.0.0",
+    "@typespec/events": "0.70.0",
+    "@typespec/http": "1.0.0",
+    "@typespec/http-specs": "0.1.0-alpha.22",
+    "@typespec/openapi": "1.0.0",
+    "@typespec/rest": "0.70.0",
+    "@typespec/spector": "0.1.0-alpha.13",
+    "@typespec/sse": "0.70.0",
+    "@typespec/streams": "0.70.0",
+    "@typespec/versioning": "0.70.0",
+    "@typespec/xml": "0.70.0",
     "@vitest/coverage-v8": "catalog:",
     "@vitest/ui": "catalog:",
     "eslint": "catalog:",
@@ -73,9 +73,9 @@
     "vitest": "catalog:"
   },
   "peerDependencies": {
-    "@azure-tools/typespec-client-generator-core": "0.55.0",
-    "@typespec/compiler": "^1.0.0-rc.1",
-    "@typespec/http": "^1.0.0-rc.1"
+    "@azure-tools/typespec-client-generator-core": "0.56.0",
+    "@typespec/compiler": "^1.0.0",
+    "@typespec/http": "^1.0.0"
   },
   "dependencies": {
     "@azure-tools/codegen": "catalog:",
