--- a/packages/typespec-go/package.json
+++ b/packages/typespec-go/package.json
@@ -25,7 +25,8 @@
     "clean-cmd": "if exist dist rmdir /s /q dist && exit 0 || exit 0 ",
     "clean-bash": "rm nul && rm -rf dist && exit 0 || exit 0",
     "tspcompile": "node .scripts/tspcompile.js",
-    "spector": "node .scripts/spector.js"
+    "spector": "node .scripts/spector.js",
+    "regen-docs": "npm run build && tspd doc . --enable-experimental --output-dir ./website/src/content/docs/docs/emitters/clients/typespec-go/reference --skip-js"
   },
   "files": [
     "dist/**",
@@ -65,6 +66,7 @@
     "@typespec/streams": "0.70.0",
     "@typespec/versioning": "0.70.0",
     "@typespec/xml": "0.70.0",
+    "@typespec/tspd": "0.70.0",
     "@vitest/coverage-v8": "catalog:",
     "@vitest/ui": "catalog:",
     "eslint": "catalog:",
