--- a/packages/typespec-go/package.json
+++ b/packages/typespec-go/package.json
@@ -5,7 +5,10 @@
   "type": "module",
   "main": "dist/typespec-go/src/index.js",
   "exports": {
-    ".": "./dist/typespec-go/src/index.js"
+    ".": {
+      "types": "./dist/typespec-go/src/index.d.js",
+      "default": "./dist/typespec-go/src/index.js"
+    }
   },
   "tspMain": "dist/typespec-go/src/index.js",
   "directories": {
