update parameter type

--- a/eng/pipelines/sdk-regenerate.yml
+++ b/eng/pipelines/sdk-regenerate.yml
@@ -4,9 +4,7 @@ pr: none
 parameters:
 - name: UseLatestSpec
   default: false
-  values:
-  - false
-  - true
+  type: boolean
 - name: ServiceFilter
   type: string
   default: ''
